[gd_scene load_steps=4 format=3 uid="uid://b3qwl307svihm"]

[ext_resource type="Script" uid="uid://dtbtlx82rft8c" path="res://EscenasGenerales/EscenaVidasNumeroMicrojuego/ContadorOnline.gd" id="1_dog7p"]
[ext_resource type="Texture2D" uid="uid://dv35agqeil7vs" path="res://Fondos/CargaMicrojuegos.png" id="2_alff8"]
[ext_resource type="AudioStream" uid="uid://ebbg1gkoms8e" path="res://AudiosGenerales/Sonidos/SonidoMicrojuegoInicio.mp3" id="3_h4dik"]

[node name="microInicio" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dog7p")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dog7p")

[node name="Fondo" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -4.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_alff8")

[node name="ContenedorInfo" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -25.0
offset_right = 0.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="LabelMicrojuego" type="Label" parent="Control/ContenedorInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Microjuego X"

[node name="LabelVidas" type="Label" parent="Control/ContenedorInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Vidas: ❤❤❤"

[node name="TimerTransicion" type="Timer" parent="Control"]
one_shot = true

[node name="MusicaInicio" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("3_h4dik")

[connection signal="timeout" from="Control/TimerTransicion" to="Control" method="_on_TimerTransicion_timeout"]
